--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -7,10 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -20,13 +23,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Run unitary tests
-        uses: actions/checkout@v4
+      - name: Run unit tests
         run: npm run test:unit
 
       - name: Run integration tests
@@ -35,10 +32,5 @@ jobs:
       - name: Run coverage report
         run: npm run test:coverage
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
       - name: Run linter
         run: npm run lint
