Ajout du déploiement Netlify

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -34,3 +34,9 @@ jobs:
 
       - name: Run linter
         run: npm run lint
+
+      - name: Build application
+        run: npm run build
+
+      - name: Deploy on Netlify 
+        run: netlify deploy --auth $NETLIFY_TOKEN --site $NETLIFY_SITE_ID --prod
