--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -42,4 +42,4 @@ jobs:
         run: npm run build
 
       - name: Deploy on Netlify 
-        run: netlify deploy --auth $NETLIFY_TOKEN --site $NETLIFY_SITE_ID --dir dist --prod
+        run: netlify deploy --auth $NETLIFY_TOKEN --site $NETLIFY_SITE_ID --dir dist --prod --yes
